--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
 	<meta charset="utf-8"><title> Preguntas </title>
 	<link rel='stylesheet' type='text/css' href='/stylesheets/style.css'/>
 	<link rel='stylesheet' type='text/css' media='only screen and (min-width: 530px) and (min-device-width: 481px)' href='/stylesheets/wide.css'/>
-	<link rel='stylesheet' type='text/css' media='only screen and (max-width: 480px) href='/stylesheets/smartphone.css'/>
+	<link rel='stylesheet' type='text/css' media='only screen and (max-width: 480px)' href='/stylesheets/smartphone.css'/>
 </head>
 
 <body>
@@ -17,6 +17,7 @@
 		<nav class="main" id="n1" role="navigation">
 			<span><a href="/">Inicio</a></span>
 			<span><a href="/quizes/question">Preguntas</a></span>
+			<span><a href="/views/author">Créditos</a></span>
 		</nav>
 
 		<section class="main" id="s1">
@@ -25,6 +26,7 @@
 
 		<footer class="main" id="f1">
 		<a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
+		<a href="https://github.com/SergioJorda/quiz-2015sergio">Mi proyecto en GitHub</a>
 		</footer>
 	</div>
 </body>
