--- a/views/ author/creditos.ejs
+++ b/views/ author/creditos.ejs
@@ -1,7 +1,3 @@
 
-    	<form method="get" action="/quizes/answer">
-    		Pregunta: <%= pregunta %>
-    		<input type="text" name="respuesta" value="Responda aquí">
-    		<input type="submit" value="enviar">
-    	</form>
-  
+<h4>Sergio Jordá</h4>
+<h5>@Sergio_Jorda</h5>
