--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,7 +17,7 @@
 		<nav class="main" id="n1" role="navigation">
 			<span><a href="/">Inicio</a></span>
 			<span><a href="/quizes/question">Preguntas</a></span>
-			<span><a href="/author/creditos">Créditos</a></span>
+			<span><a href="/creditos">Créditos</a></span>
 		</nav>
 
 		<section class="main" id="s1">
