--- a/views/quizes/creditos.ejs
+++ b/views/quizes/creditos.ejs
@@ -1,4 +1,4 @@
 
-<a href="/images/sergio.jpg" width="100"></a>
+<img src="/images/sergio.jpg" width="100"/>
 <h4>Sergio Jordá</h4>
 <h5>@Sergio_Jorda</h5>
