--- a/views/quizes/creditos.ejs
+++ b/views/quizes/creditos.ejs
@@ -1,4 +1,4 @@
 
-<img src="/images/sergio.jpg" width="100"/>
+<img src="/images/sergio.jpg" alt="yo"width="100" height="100"/>
 <h4>Sergio Jordá</h4>
 <h5>@Sergio_Jorda</h5>
